--- a/EmojiArt/Base.lproj/Main.storyboard
+++ b/EmojiArt/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BUe-TB-9LI">
     <device id="ipad9_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
@@ -134,6 +134,22 @@
             </objects>
             <point key="canvasLocation" x="1469" y="-292"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="xC3-Pn-UsB">
+            <objects>
+                <navigationController id="BUe-TB-9LI" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="WT9-6I-Zhy">
+                        <rect key="frame" x="0.0" y="20" width="1024" height="50"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="gzG-oX-wRD"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1ry-vd-LzA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="38" y="-23"/>
+        </scene>
         <!--Emoji Art View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -143,7 +159,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eG7-zh-k0M" userLabel="Emoji Collection VIew">
-                                <rect key="frame" x="0.0" y="20" width="1024" height="80"/>
+                                <rect key="frame" x="0.0" y="70" width="1024" height="80"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="80" id="X3B-md-I6e"/>
                                 </constraints>
@@ -152,7 +168,7 @@
                                 </connections>
                             </containerView>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="I36-yJ-T5f" userLabel="Composite Image View">
-                                <rect key="frame" x="0.0" y="100" width="1024" height="668"/>
+                                <rect key="frame" x="0.0" y="150" width="1024" height="618"/>
                                 <connections>
                                     <segue destination="0cP-C3-Elj" kind="embed" id="RE1-Ee-nCN"/>
                                 </connections>
@@ -170,6 +186,13 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="5o4-wx-oSU"/>
                     </view>
+                    <navigationItem key="navigationItem" id="VsX-lh-weJ">
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="q6t-vx-9Xp">
+                            <connections>
+                                <action selector="saveButtonPressed" destination="BYZ-38-t0r" id="0ED-eL-xKl"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -180,19 +203,13 @@
             <objects>
                 <viewController id="0cP-C3-Elj" customClass="CompositeImageViewController" customModule="EmojiArt" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="YVh-QZ-lvR">
-                        <rect key="frame" x="0.0" y="0.0" width="1024" height="668"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="618"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ete-97-SD0" userLabel="Drop Zone">
-                                <rect key="frame" x="0.0" y="0.0" width="1024" height="668"/>
+                                <rect key="frame" x="0.0" y="0.0" width="1024" height="618"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Drop Image here" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9KU-Z3-AWH">
-                                        <rect key="frame" x="347.5" y="306" width="329.5" height="56.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="47"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" placeholderIntrinsicWidth="1024" placeholderIntrinsicHeight="668" translatesAutoresizingMaskIntoConstraints="NO" id="EEs-o6-qQk">
+                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" placeholderIntrinsicWidth="1024" placeholderIntrinsicHeight="668" bounces="NO" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EEs-o6-qQk">
                                         <rect key="frame" x="0.0" y="0.0" width="1024" height="668"/>
                                         <constraints>
                                             <constraint firstAttribute="height" priority="250" constant="668" id="Bd5-lD-2zm"/>
@@ -202,22 +219,28 @@
                                 </subviews>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="9KU-Z3-AWH" firstAttribute="centerX" secondItem="Ete-97-SD0" secondAttribute="centerX" id="9ka-ts-gZt"/>
                                     <constraint firstItem="EEs-o6-qQk" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Ete-97-SD0" secondAttribute="leading" id="Pe6-p1-V4S"/>
                                     <constraint firstItem="EEs-o6-qQk" firstAttribute="centerY" secondItem="Ete-97-SD0" secondAttribute="centerY" id="R8Z-SH-XHH"/>
                                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="EEs-o6-qQk" secondAttribute="trailing" id="Xl3-NM-MNk"/>
                                     <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="EEs-o6-qQk" secondAttribute="bottom" id="YNy-U7-Isg"/>
                                     <constraint firstItem="EEs-o6-qQk" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Ete-97-SD0" secondAttribute="top" id="gc6-QX-Xeg"/>
-                                    <constraint firstItem="9KU-Z3-AWH" firstAttribute="centerY" secondItem="Ete-97-SD0" secondAttribute="centerY" id="kDT-ow-7Mn"/>
                                     <constraint firstItem="EEs-o6-qQk" firstAttribute="centerX" secondItem="Ete-97-SD0" secondAttribute="centerX" id="tKa-OW-zac"/>
                                 </constraints>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Drop Image here" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9KU-Z3-AWH">
+                                <rect key="frame" x="347.5" y="281" width="329.5" height="56.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="47"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="Ete-97-SD0" secondAttribute="trailing" id="8te-lf-rQc"/>
                             <constraint firstAttribute="bottom" secondItem="Ete-97-SD0" secondAttribute="bottom" id="HX3-9f-r9K"/>
+                            <constraint firstItem="9KU-Z3-AWH" firstAttribute="centerX" secondItem="YVh-QZ-lvR" secondAttribute="centerX" id="MIW-7q-NDU"/>
                             <constraint firstItem="Ete-97-SD0" firstAttribute="top" secondItem="YVh-QZ-lvR" secondAttribute="top" id="gpy-Jp-V5y"/>
+                            <constraint firstItem="9KU-Z3-AWH" firstAttribute="centerY" secondItem="YVh-QZ-lvR" secondAttribute="centerY" id="u3D-6L-DXa"/>
                             <constraint firstItem="Ete-97-SD0" firstAttribute="leading" secondItem="YVh-QZ-lvR" secondAttribute="leading" id="xyP-1h-6Lc"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6n1-9p-dce"/>
