--- a/EmojiArt/Base.lproj/Main.storyboard
+++ b/EmojiArt/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BUe-TB-9LI">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="FjY-gH-gjX">
     <device id="ipad9_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
@@ -134,10 +134,25 @@
             </objects>
             <point key="canvasLocation" x="1469" y="-292"/>
         </scene>
+        <!--Emoji Art Document Browser View Controller-->
+        <scene sceneID="139-nt-E3m">
+            <objects>
+                <viewController id="FjY-gH-gjX" customClass="EmojiArtDocumentBrowserViewController" customModule="EmojiArt" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="CcU-xg-Jgo">
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="LsE-Fw-bh2"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hz7-IM-fqT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-584" y="-23"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="xC3-Pn-UsB">
             <objects>
-                <navigationController id="BUe-TB-9LI" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="EmojiArtNav" id="BUe-TB-9LI" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="WT9-6I-Zhy">
                         <rect key="frame" x="0.0" y="20" width="1024" height="50"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -148,12 +163,12 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1ry-vd-LzA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="38" y="-23"/>
+            <point key="canvasLocation" x="117" y="-23"/>
         </scene>
         <!--Emoji Art View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="EmojiArtViewController" customModule="EmojiArt" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="EmojiArtVC" id="BYZ-38-t0r" customClass="EmojiArtViewController" customModule="EmojiArt" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -187,6 +202,11 @@
                         <viewLayoutGuide key="safeArea" id="5o4-wx-oSU"/>
                     </view>
                     <navigationItem key="navigationItem" id="VsX-lh-weJ">
+                        <barButtonItem key="leftBarButtonItem" systemItem="done" id="2fb-me-eO8">
+                            <connections>
+                                <action selector="doneButtonPressed" destination="BYZ-38-t0r" id="vMb-K4-PEs"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="q6t-vx-9Xp">
                             <connections>
                                 <action selector="saveButtonPressed" destination="BYZ-38-t0r" id="0ED-eL-xKl"/>
