move initial possible emoji into template document, in EmojiArtDocumentBrowserVC refactor EmojiArtDocument and EmojiArtDocumentBrowserVC implement present-child-VCs segues

--- a/EmojiArt/Base.lproj/Main.storyboard
+++ b/EmojiArt/Base.lproj/Main.storyboard
@@ -179,13 +179,13 @@
                                     <constraint firstAttribute="height" constant="80" id="X3B-md-I6e"/>
                                 </constraints>
                                 <connections>
-                                    <segue destination="Ydb-tA-FEj" kind="embed" id="eMk-bA-kd4"/>
+                                    <segue destination="Ydb-tA-FEj" kind="embed" identifier="presentDynamicCollection" id="eMk-bA-kd4"/>
                                 </connections>
                             </containerView>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="I36-yJ-T5f" userLabel="Composite Image View">
                                 <rect key="frame" x="0.0" y="150" width="1024" height="618"/>
                                 <connections>
-                                    <segue destination="0cP-C3-Elj" kind="embed" id="RE1-Ee-nCN"/>
+                                    <segue destination="0cP-C3-Elj" kind="embed" identifier="presentCompositeImage" id="RE1-Ee-nCN"/>
                                 </connections>
                             </containerView>
                         </subviews>
