--- a/EmojiArt/Base.lproj/Main.storyboard
+++ b/EmojiArt/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="2KV-kL-yMH">
-                                <rect key="frame" x="150" y="193" width="240" height="234"/>
+                                <rect key="frame" x="150" y="173" width="240" height="274"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="D7j-nS-0cY">
                                         <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
@@ -30,36 +30,36 @@
                                         </constraints>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="WGJ-DD-cJb">
-                                        <rect key="frame" x="29.5" y="136" width="181.5" height="51"/>
+                                        <rect key="frame" x="31" y="136" width="178" height="50"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="bottom" translatesAutoresizingMaskIntoConstraints="NO" id="HgM-Xf-I8Q">
-                                                <rect key="frame" x="0.0" y="0.0" width="80.5" height="51"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="77" height="50"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Size" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N5D-2e-Uut">
-                                                        <rect key="frame" x="43.5" y="0.0" width="37" height="25.5"/>
+                                                        <rect key="frame" x="40" y="0.0" width="37" height="25"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Modified" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4A4-bb-366">
-                                                        <rect key="frame" x="0.0" y="25.5" width="80.5" height="25.5"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                                        <rect key="frame" x="0.0" y="25" width="77" height="25"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="tD3-9x-aPD">
-                                                <rect key="frame" x="90.5" y="0.0" width="91" height="51"/>
+                                                <rect key="frame" x="87" y="0.0" width="91" height="50"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="99 KBytes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YAr-mt-jeS">
-                                                        <rect key="frame" x="0.0" y="0.0" width="91" height="24.5"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="91" height="24"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="11.11.18" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BQC-t2-h6r">
-                                                        <rect key="frame" x="0.0" y="26.5" width="66.5" height="24.5"/>
+                                                        <rect key="frame" x="0.0" y="26" width="66.5" height="24"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -68,9 +68,19 @@
                                             </stackView>
                                         </subviews>
                                     </stackView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UjQ-oq-FaQ">
+                                        <rect key="frame" x="48.5" y="194" width="143" height="36"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <state key="normal" title="Close document">
+                                            <color key="titleColor" red="1" green="0.18904608410000001" blue="0.22073796949999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <segue destination="srQ-j4-cN7" kind="unwind" unwindAction="unwind:" id="Gyj-Zz-T8N"/>
+                                        </connections>
+                                    </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TSf-sk-0yc">
-                                        <rect key="frame" x="88" y="195" width="64" height="39"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                        <rect key="frame" x="91" y="238" width="58" height="36"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <state key="normal" title="Return"/>
                                         <connections>
                                             <action selector="returnButtonPressed" destination="hVf-nU-krf" eventType="touchUpInside" id="kNo-IY-gpc"/>
@@ -92,11 +102,13 @@
                         <outlet property="aspectRatioConstraint" destination="ZjL-Vj-4g5" id="C4J-1Z-KO5"/>
                         <outlet property="modifiedDateLabel" destination="BQC-t2-h6r" id="I83-og-ypV"/>
                         <outlet property="previewImageView" destination="D7j-nS-0cY" id="UbC-vj-JND"/>
+                        <outlet property="returnButton" destination="TSf-sk-0yc" id="FLW-co-aT5"/>
                         <outlet property="sizeLabel" destination="YAr-mt-jeS" id="DCn-kW-eTk"/>
                         <outlet property="topLevelStack" destination="2KV-kL-yMH" id="sV7-Ul-Cx0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EZD-yK-TJa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="srQ-j4-cN7" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1469" y="-752"/>
         </scene>
@@ -297,7 +309,7 @@
                     <navigationItem key="navigationItem" id="VsX-lh-weJ">
                         <barButtonItem key="leftBarButtonItem" systemItem="done" id="2fb-me-eO8">
                             <connections>
-                                <action selector="doneButtonPressed" destination="BYZ-38-t0r" id="vMb-K4-PEs"/>
+                                <action selector="close" destination="BYZ-38-t0r" id="vMb-K4-PEs"/>
                             </connections>
                         </barButtonItem>
                         <rightBarButtonItems>
